# C3PO

./: .prettierignore  README.md  idea.md  package.json  turbo.json
Code/apps/web/src/: .app.html.swp
apps/back/: .env.example  package.json  tsconfig.json
apps/back/scripts/: smoke-routes.ts
apps/back/src/: index.ts
apps/back/src/agent/: runtime.ts
apps/back/src/bridge/: client.ts
apps/back/src/db/: drizzle.ts
apps/back/src/lib/: auth.ts
apps/back/src/routes/: agent.ts  skills.ts  state.ts  tasks.ts
apps/back/src/skills/: cancel-task.ts  clap.ts  damp.ts  define.ts  get-state.ts  hug.ts  index.ts  lie-up.ts  list-active-tasks.ts  point-at.ts  prepare.ts  release-arm.ts  say.ts  shake-hand.ts  sit-g1.ts  squat.ts  start-walking.ts  (+5 more)
apps/bridge/: .env.example  .gitignore  README.md  package.json  pyproject.toml
apps/bridge/scripts/: dds_scan.py  dds_scan_domain1.py  go2_connect_test.py  go2_connect_test_driver.py  go2_move_forward.py  move_test.py  move_test2.py  peek_sim_state.py  postsync.sh  rotate.py  wave_hand.py
apps/bridge/src/bridge/: __init__.py  mcp_server.py
apps/bridge/src/bridge/sdk/: __init__.py  connection.py  faults.py  g1_protocol.py  go2_protocol.py  state.py
apps/bridge/src/bridge/sdk/transport/: __init__.py  webrtc_go2.py  webrtc_v3_sdp.py
apps/bridge/src/bridge/skills/: __init__.py  _g1_request.py  _locomotion.py  stop_everything.py  task_runtime.py  turn.py  walk_to.py
apps/web/: .env.example  .prettierrc  package.json  svelte.config.js  tsconfig.json
apps/web/src/: app.d.ts  app.html  hooks.server.ts
docs/: SPEC.md
(+63 files in other folders)
