[project]
name = "bridge"
version = "0.1.0"
description = "C3PO bridge: Unitree G1 SDK wrapper, MCP server, voice loop."
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.10",
    "pydantic>=2.8",
    "structlog>=24",
    "python-dotenv>=1",
    "cyclonedds==0.10.2",
    "unitree-sdk2py",
    "aiortc>=1.14.0",
    "go2-webrtc-connect>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
unitree-sdk2py = { git = "https://github.com/unitreerobotics/unitree_sdk2_python.git" }
